--- a/index.html
+++ b/index.html
@@ -14,44 +14,16 @@
         <img id="copyrightImage" src="images/copyrightImage.jpg" />
         <div class="abstractSky"></div>
         <div class="abstractSunrise"></div>
-        <div class="abstractLand"></div>
+        <div class="abstractSea"></div>
+        <p id="paintingTitle">
+          Abstract painting : <i> Sunrise on sea bed </i>
+        </p>
       </div>
-      <p id="paintingTitle">Abstract painting : <i> Sunrise on sea bed </i></p>
     </section>
-    <!-- form to collect user data -->
-    <section>
-      <p class="message">
-        Interested in purchasing a digital copy of this artwork?? Please leave
-        your name and email here.
-      </p>
-      <form target="_blank" action="thankyou.html">
-        <div class="buyerSection">
-          <label for="buyerFullName" class="buyerdata">
-            Your full name:
-            <input
-              type="text"
-              id="buyerFullName"
-              placeholder="first name       last name"
-              required
-            />
-          </label>
-          <label for="buyerEmail" class="buyerdata"
-            >Email:
-            <input
-              type="email"
-              id="buyerEmail"
-              placeholder="abc@xyz.com"
-              required
-          /></label>
-          <!-- override font size for button text -->
-          <input
-            type="submit"
-            value="Submit"
-            class="buyerdata submit"
-            style="font-weight: bold"
-          />
-        </div>
-      </form>
-    </section>
+    <footer class="footer">
+      <a href="https://www.linkedin.com/in/kala-subramani/" target="_blank"
+        >Visit my profile</a
+      >
+    </footer>
   </body>
 </html>
